--- a/projects/easnoth/fight2players.html
+++ b/projects/easnoth/fight2players.html
@@ -17,7 +17,7 @@
 			}
 			
 			loadAmber({
-			files: ['Easnoth-Core.js','Easnoth-Tools.js','Easnoth-fight-Menu.js','Easnoth-fight-States.js','Easnoth-BusinessObjects', 'Easnoth-Visitors'],
+			files: ['Easnoth-Core.js','Easnoth-Tools.js','Easnoth-Fight-Menu.js','Easnoth-Fight-States.js','Easnoth-BusinessObjects.js', 'Easnoth-Visitors.js'],
 			prefix: 'projects/easnoth/js'/*,
 			deploy: true*/}); 
 		</script>
