--- a/projects/easnoth/fight2players.html
+++ b/projects/easnoth/fight2players.html
@@ -27,7 +27,13 @@
         <canvas id="background" width="1366" height="768"> 
                Your browser does not support this content. Dowload Chrome, Firefox, IE 9+, Chrome plugin, ...
         </canvas>
-        <canvas id="eventManager" width="1366" height="768">
+        <canvas id="game" class="layer" width="1366" height="768">
+            Your browser does not support this content. Dowload Chrome, Firefox, IE 9+, Chrome plugin, ...
+        </canvas>
+        <canvas id="monster" class="layer" width="1366" height="768">
+            Your browser does not support this content. Dowload Chrome, Firefox, IE 9+, Chrome plugin, ...
+        </canvas>
+        <canvas id="eventManager" class="layer" width="1366" height="768">
             Your browser does not support this content. Dowload Chrome, Firefox, IE 9+, Chrome plugin, ...
         </canvas>
 		<div class="menuEditor" id="menuEditor">
