system now bootstrap on new model

--- a/projects/easnoth/fight2players.html
+++ b/projects/easnoth/fight2players.html
@@ -23,7 +23,7 @@
 		</script>
 		<title>Easnoth : Battle Arena</title>
 	</head>
-	<body class="editor"onload="adjust();smalltalk.Map._newWithMapIndex_(mapIndex);"> 
+	<body class="editor"onload="adjust();smalltalk.CWBootstrapper._bootstrap_(mapIndex);"> 
         <canvas id="background" width="1366" height="768"> 
                Your browser does not support this content. Dowload Chrome, Firefox, IE 9+, Chrome plugin, ...
         </canvas>
