started to port the menu

--- a/projects/easnoth/fight2players.html
+++ b/projects/easnoth/fight2players.html
@@ -17,7 +17,7 @@
 			}
 			
 			loadAmber({
-			files: ['Easnoth-Core.js','Easnoth-States','Easnoth-Fight-Menu.js','Easnoth-Fight-States.js','Easnoth-BusinessObjects.js', 'Easnoth-Visitors.js', 'Easnoth-Announcements.js', 'Easnoth-Game.js'],
+			files: ['Easnoth-Core.js','Easnoth-States','Easnoth-Fight-Menu.js','Easnoth-Fight-States.js','Easnoth-BusinessObjects.js', 'Easnoth-Visitors.js', 'Easnoth-Announcements.js', 'Easnoth-Menu.js', 'Easnoth-Game.js'],
 			prefix: 'projects/easnoth/js'/*,
 			deploy: true*/}); 
 		</script>
