finished to port to current model with still some old code kept and ready to deploy

--- a/projects/easnoth/fight2playersdeploy.html
+++ b/projects/easnoth/fight2playersdeploy.html
@@ -17,9 +17,9 @@
 			}
 			
 			loadAmber({
-			files: ['Easnoth-Core.js','Easnoth-States','Easnoth-Fight-Menu.js','Easnoth-Fight-States.js','Easnoth-BusinessObjects.js', 'Easnoth-Visitors.js', 'Easnoth-Announcements.js', 'Easnoth-Menu.js', 'Easnoth-Game.js'],
-			prefix: 'projects/easnoth/js'/*,
-			deploy: true*/});
+			files: ['Easnoth-States','Easnoth-BusinessObjects.js', 'Easnoth-Visitors.js', 'Easnoth-Announcements.js', 'Easnoth-Menu.js', 'Easnoth-Game.js'],
+			prefix: 'projects/easnoth/js',
+			deploy: true});
 		</script>
 		<title>Easnoth : Battle Arena</title>
 	</head>
