--- a/projects/easnoth/fight2players.html
+++ b/projects/easnoth/fight2players.html
@@ -17,13 +17,13 @@
 			}
 			
 			loadAmber({
-			files: ['Easnoth-States','Easnoth-BusinessObjects.js', 'Easnoth-Visitors.js', 'Easnoth-Announcements.js', 'Easnoth-Menu.js', 'Easnoth-Game.js'],
+			files: ['Easnoth-States','Easnoth-BusinessObjects.js', 'Easnoth-Visitors.js', 'Easnoth-Announcements.js', 'Easnoth-StartMenu.js', 'Easnoth-Menu.js', 'Easnoth-Game.js'],
 			prefix: 'projects/easnoth/js'/*,
 			deploy: true*/});
 		</script>
 		<title>Easnoth : Battle Arena</title>
 	</head>
-	<body class="editor"onload="adjust();smalltalk.CWBootstrapper._bootstrap_(mapIndex);"> 
+	<body class="editor"onload="adjust();smalltalk.CWStartMenu._start();"> 
         <canvas id="background" width="1366" height="768"> 
                Your browser does not support this content. Dowload Chrome, Firefox, IE 9+, Chrome plugin, ...
         </canvas>
