--- a/projects/easnoth/easnothdebug.html
+++ b/projects/easnoth/easnothdebug.html
@@ -8,7 +8,7 @@
 		<script type="text/javascript">
 			
 			loadAmber({
-			files: ['Easnoth-States','Easnoth-BusinessObjects.js', 'Easnoth-Visitors.js', 'Easnoth-Announcements.js', 'Easnoth-StartMenu.js', 'Easnoth-Menu.js', 'Easnoth-Game.js', 'Easnoth-Monsters'],
+			files: ['Easnoth-Announcements.js','Easnoth-Bootstrap','Easnoth-GameAndPlayers','Easnoth-GameStates','Easnoth-MapMenu','Easnoth-MapModel','Easnoth-MapUI','Easnoth-MonsterStrategies'],
 			prefix: 'projects/easnoth/js',
             ready: function() {smalltalk.CWStartMenu._start()}/*,
 			deploy: true*/});
