test new graphic motor speed

--- a/projects/easnoth/easnoth.html
+++ b/projects/easnoth/easnoth.html
@@ -8,7 +8,7 @@
 		<script type="text/javascript">
 			
 			loadAmber({
-			files: ['Easnoth-States','Easnoth-BusinessObjects.js', 'Easnoth-Visitors.js', 'Easnoth-Announcements.js', 'Easnoth-StartMenu.js', 'Easnoth-Menu.js', 'Easnoth-Game.js', 'Easnoth-Monsters'],
+			files: ['Easnoth-Announcements.js','Easnoth-Bootstrap','Easnoth-GameAndPlayers','Easnoth-GameStates','Easnoth-MapMenu','Easnoth-MapModel','Easnoth-MapUI','Easnoth-MonsterStrategies'],
 			prefix: 'projects/easnoth/js',
             ready: function() {smalltalk.CWStartMenu._start()},
 			deploy: true});
@@ -22,6 +22,8 @@
         <canvas id="game" class="layer" width="1366" height="768">
             Your browser does not support this content. Dowload Chrome, Firefox, IE 9+, Chrome plugin, ...
         </canvas>
+		<div class='layer' id='foo'>
+		</div>
         <canvas id="monster" class="layer" width="1366" height="768">
             Your browser does not support this content. Dowload Chrome, Firefox, IE 9+, Chrome plugin, ...
         </canvas>
