--- a/projects/easnoth/easnothdebug.html
+++ b/projects/easnoth/easnothdebug.html
@@ -8,7 +8,7 @@
 		<script type="text/javascript">
 			
 			loadAmber({
-			files: ['Easnoth-Announcements.js','Easnoth-Bootstrap','Easnoth-GameAndPlayers','Easnoth-GameStates','Easnoth-MapMenu','Easnoth-MapModel','Easnoth-MapUI','Easnoth-MonsterStrategies'],
+			files: ['Easnoth-Announcements.js', 'Easnoth-Bootstrap', 'Easnoth-GameAndPlayers', 'Easnoth-GameStates', 'Easnoth-MapMenu', 'Easnoth-MapModel', 'Easnoth-MapUI', 'Easnoth-MonsterStrategies'],
 			prefix: 'projects/easnoth/js',
             ready: function() {smalltalk.CWStartMenu._start()}/*,
 			deploy: true*/});
@@ -19,10 +19,7 @@
         <canvas id="background" width="1366" height="768"> 
                Your browser does not support this content. Dowload Chrome, Firefox, IE 9+, Chrome plugin, ...
         </canvas>
-        <canvas id="game" class="layer" width="1366" height="768">
-            Your browser does not support this content. Dowload Chrome, Firefox, IE 9+, Chrome plugin, ...
-        </canvas>
-		<div class='layer' id='foo'>
+		<div class='layer' id='got'>
 		</div>
         <canvas id="monster" class="layer" width="1366" height="768">
             Your browser does not support this content. Dowload Chrome, Firefox, IE 9+, Chrome plugin, ...
