--- a/projects/easnoth/easnothdebug.html
+++ b/projects/easnoth/easnothdebug.html
@@ -20,10 +20,8 @@
                Your browser does not support this content. Dowload Chrome, Firefox, IE 9+, Chrome plugin, ...
         </canvas>
 		<div class='layer' id='got'>
+		</div><div class='layer' id='monster'>
 		</div>
-        <canvas id="monster" class="layer" width="1366" height="768">
-            Your browser does not support this content. Dowload Chrome, Firefox, IE 9+, Chrome plugin, ...
-        </canvas>
         <canvas id="eventManager" class="layer" width="1366" height="768">
             Your browser does not support this content. Dowload Chrome, Firefox, IE 9+, Chrome plugin, ...
         </canvas>
