--- a/projects/easnoth/easnoth.html
+++ b/projects/easnoth/easnoth.html
@@ -16,14 +16,16 @@
 		<title>Easnoth : Battle Arena</title>
 	</head>
 	<body class="editor"onload="adjust();"> 
-		<div id='global'>
-	        <canvas id="background" width="1136" height="640"> 
-	               Your browser does not support this content. Dowload Chrome, Firefox, IE 9+, Chrome plugin, ...
-	        </canvas>
-			<div class='layer' id='got'></div>
-			<div class='layer' id='monster'></div>
-	        <canvas id="eventManager" class="layer" width="1136" height="640"></canvas>
-			<div class="menuEditor" id="menuEditor"></div>
+        <canvas id="background" width="1366" height="768"> 
+               Your browser does not support this content. Dowload Chrome, Firefox, IE 9+, Chrome plugin, ...
+        </canvas>
+		<div class='layer' id='got'>
+		</div><div class='layer' id='monster'>
+		</div>
+        <canvas id="eventManager" class="layer" width="1366" height="768">
+            Your browser does not support this content. Dowload Chrome, Firefox, IE 9+, Chrome plugin, ...
+        </canvas>
+		<div class="menuEditor" id="menuEditor">
 		</div>
 	</body>
 </html>
