--- a/projects/easnoth/easnoth.html
+++ b/projects/easnoth/easnoth.html
@@ -15,7 +15,7 @@
 		</script>
 		<title>Easnoth : Battle Arena</title>
 	</head>
-	<body class="editor" onload="adjust();" onResize="adjust();"> 
+	<body class="editor"> 
 		<div id='global'>
 	        <canvas id="background" width="1136" height="640"> 
 	               Your browser does not support this content. Dowload Chrome, Firefox, IE 9+, Chrome plugin, ...
